# bevy_shader_mtoon

./: Cargo.toml  README.md  default.nix
examples/: basic.rs  hello.rs
src/: lib.rs  mtoon.wgsl
