[package]
name = "bevy_mat_mtoon"
description = "MToon material in Bevy!"
version = "0.0.1"
license = "MIT"
repository = "https://github.com/unavi-xyz/bevy_mat_mtoon"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'

[dependencies]
bevy = "0.11.3"
