[package]
name = "bevy_shader_mtoon"
description = "Bevy MToon shader."
version = "0.0.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/unavi-xyz/bevy_shader_mtoon"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'

[dependencies]
bevy = "0.12.0"
